# comfyui-portrait-master

./: .gitignore  CHANGELOG.md  PORTRAIT_MASTER_2.9.2.md  README.md  __init__.py  legacy.py  prompt-master-prompt-control-workflow.json  prompt-master-sample-workflow.json  pyproject.toml  utils.py
.github/workflows/: publish.yml
comfyui-portrait-master/: __init__.py
comfyui-portrait-master/lists/: gender_list.txt  hair_style_list.txt  nationality_list.txt  shot_list.txt
lists/: age.json  age_list.txt  beard_list.txt  body_type_list.txt  breast_size_list.txt  butt_size_list.txt  circular_iris.json  circular_pupil.json  clothes_list.txt  dimples.json  disheveled.json  eyebrow.json  eyebrows_color_list.txt  eyes.json  eyes_color.json  eyes_color_list.txt  eyes_details.json  eyes_shape_list.txt  face_expression.json  face_expression_list.txt  face_shape.json  face_shape_list.txt  facial_asymmetry.json  female_lingerie_list.txt  freckles.json  gender.json  hair_color.json  hair_color_list.txt  hair_length_list.txt  hair_style.json  hair_style_list.txt  iris_details.json  language.json  light_direction.json  light_direction_list.txt  light_type.json  light_type_list.txt  lip_color.json  lip_shape.json  lips_color_list.txt  (+18 more)
workflow/: Portrait Master SDXL.json  portrait-master-basic-workflow-SD1.5.json  portrait-master-controlnet-workflow.json  portrait-master-controlnet2x-workflow.json  portrait-master-workflow-SDXL.json  prompt-master-controlnet-workflow.json  prompt-master-sample-workflow-prompt-control.json  prompt-master-sample-workflow.json
(+2 files in other folders)
